- Update svg logo files to be responsive agaon > fixes issues welcome screen small icon - Added warning color to clear database button - Updated speed splash screen, gives impression something is happening vs looking like its stuck - Added some color in the welkcome screen, would prefer a colored logo but i cant seem to be able to do that - Added indication "open helpcenter" is a button, prior it was plain text, didnt give impression of button @Remi I had to make a div[role='alertdialog'] class to get the button red inside a div dialog,

--- a/widgets/popovers/popover.scss
+++ b/widgets/popovers/popover.scss
@@ -54,6 +54,12 @@ dialog {
   }
 }
 
+div[role='alertdialog'] {
+  .btn-filled:not(:hover) {
+    background-color: var(--accent-color-red);
+  }
+}
+
 dialog[role='alertdialog'] {
   > .dialog-content {
     grid-template: 'dialog-icon dialog-title' 'dialog-icon dialog-information' 'dialog-footer dialog-footer';
